# ucdapi

./: .dockerignore  .gitignore  Application.hs  Dockerfile  Foundation.hs  Instrument.hs  LICENSE  Load.hs  Model.hs  Settings.hs  UCD.cabal  UnicodeVersion.hs  base.docker  build.docker  package.yaml  run.docker  stack.yaml
.halcyon/: constraints
.halcyon/sandbox-extra-apps-constraints/: alex-3.1.4.constraints  happy-1.19.5.constraints
Handler/: Common.hs  Home.hs  UCD.hs
app/: devel.hs  loaddata.hs  main.hs
client/: .babelrc  package.json
client/assets/: manifest.json
client/src/: index.js  store.js
client/src/scenes/Home/: actions.js  index.js  reducer.js
client/src/scenes/Home/components/UnicodeVersion/: index.js
client/src/services/api/: actions.js  reducer.js
client/webpack/: template.html  webpack.config.dev.js  webpack.config.prod.js
config/: keter.yml  models  routes  settings.yml  sqlite.yml  test-settings.yml
docker/: Dockerfile  run.docker
src/Lib/: API.hs  Application.hs  Character.hs  Instrument.hs  Load.hs  Middleware.hs  UCD.hs  UnicodeVersion.hs
templates/: default-layout-wrapper.hamlet  homepage.hamlet  ucd-resources.hamlet  versions.hamlet
test/: TestImport.hs
