name:              UCD
version:           0.0.0
license:           MIT
license-file:      LICENSE
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Handler.Common
                     Handler.Home
                     Handler.UCD
                     Load
                     UnicodeVersion

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                DeriveGeneric
                ViewPatterns
                TupleSections
                RecordWildCards
                FlexibleInstances
                LambdaCase
                RankNTypes

    build-depends: base                          >= 4          && < 5
                 , aeson
                 , bool-extras
                 , bytestring
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , containers
                 , data-default
                 , directory
                 , fast-logger
                 , file-embed
                 , hexpat
                 , hexpat-lens
                 , hjsmin
                 , http-conduit
                 , lens
                 , lens-aeson
                 , monad-control
                 , monad-logger
                 , persistent
                 , persistent-sqlite
                 , persistent-template
                 , safe
                 , shakespeare
                 , template-haskell
                 , text
                 , time
                 , unordered-containers
                 , vector
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , warp-tls
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-static

executable         ucdapi
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, UCD

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable         loaddata
    if flag(library-only)
        Buildable: False

    main-is:           loaddata.hs
    hs-source-dirs:    app
    build-depends:     base
                     , UCD
                     , monad-logger

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                DeriveGeneric
                ViewPatterns
                TupleSections
                FlexibleInstances

    build-depends: base
                 , UCD
                 , yesod-test >= 1.4.3 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
